tests/expectations/compiler/address/gte_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected a field, scalar, or integer but type `address` was found.
    --> compiler-test:7:16
     |
   7 |         return x >= sender;
     |                ^
Error [ETYC0372117]: Expected a field, scalar, or integer but type `address` was found.
    --> compiler-test:7:21
     |
   7 |         return x >= sender;
     |                     ^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
